@@ -1,11 +1,9 @@
 #define IDD_CONFIG			101
 #define IDC_MIXING_FREQ			1000
-#define IDC_CONVERT8BIT			1001
-#define IDC_FORCE_MONO			1002
-#define IDC_INTERPOLATION		1003
-#define IDC_FILTER			1004
-#define IDC_FORCE8BIT			1005
-#define IDC_FIXLOOPS			1006
-#define IDC_LOOP			1007
-#define IDC_MODRANGE			1008
-#define IDC_PAN_AMPLITUDE		1009
+#define IDC_FORCE_MONO			1001
+#define IDC_INTERPOLATION		1002
+#define IDC_FILTER			1003
+#define IDC_FIXLOOPS			1004
+#define IDC_LOOP			1005
+#define IDC_MODRANGE			1006
+#define IDC_PAN_AMPLITUDE		1007
